# otlp-endpoint-lambda-rust

./: .editorconfig  .gitignore  Pulumi.dev.yaml  Pulumi.yaml  README.md  awspp  devbox.json  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
api/: Cargo.toml  build.rs
api/aws/: collector-config.yaml  lambda-remote.ts  lambda.ts
api/src/: hello.rs  main.rs  otel.rs
monitoring/aws/: transaction-search.ts
